--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "mongo": "^0.1.0",
     "mongodb": "^3.0.10",
+    "mongoose": "^5.1.4",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11"
   }
